--- a/atributo.css
+++ b/atributo.css
@@ -1,3 +1,8 @@
 body{
     background-color: green;
 }
+
+ul{
+    background-color: azure;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
